Fix center alignment on mobile to account for browser address bar

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -4,6 +4,12 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+html,
+body,
+#__next {
+  height: 100%;
+}
+
 body {
   @apply font-sans;
   @apply text-gray-text;
